# plugin.birthdays

./: .gitignore  README.md  compress.bat  compress.py  compress.sh  pyproject.toml
pibox_birthdays/: load_birthdays.py  run.py  video_handler.py
src/: bot.session  load_birthdays.py  pibox.birthdays.py  setup.py  telegram.config  telegram.py  test.py  video_handler.py
src/assets/: birthdays.xlsx
src/pibox_birthdays/: setup_pibox.py  telegram.py
